--- a/usr.sbin/bsdconfig/share/Makefile
+++ b/usr.sbin/bsdconfig/share/Makefile
@@ -3,8 +3,8 @@
 SUBDIR=	media packages
 
 FILESDIR=	${SHAREDIR}/bsdconfig
-FILES=		common.subr device.subr dialog.subr geom.subr keymap.subr \
-		mustberoot.subr script.subr strings.subr struct.subr \
-		sysrc.subr variable.subr
+FILES=		common.subr device.subr dialog.subr float.subr geom.subr \
+		keymap.subr mustberoot.subr script.subr strings.subr \
+		struct.subr sysrc.subr variable.subr
 
 .include <bsd.prog.mk>
